--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <ol>
         <li><a href="https://www.google.com/">item 1</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li>item 3</li>
     </ol>
 
